👋update article commonts